src/objects/Tag__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>部署</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>タグ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>タグ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>タグNo.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>